minor styling touchup to login page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11309,3 +11309,14 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+
+
+#login-form-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+#login-form-container h1{
+  font-size: 32px;
+}
