--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,14 +4,16 @@
         <%-include ('../partials/head.ejs')%>
     </head>
     <body>
-        <h1>This is the login page</h1>
+        <section id="login-form-container">
+        <h1>Login</h1>
         <form action="/users/login" method="POST">
             <label for="username">Username:</label>
-            <input type="text" name="username" placeholder="required" required>
+            <input type="text" name="username" placeholder="required" required><br>
             <label for="password">Password:</label>
             <input type="password" name="password" placeholder="required">
             <button type="submit">Login</button>
         </form>
+        </section>
         
     <a href="/users/new"><button>Create a new user!</button></a>
     
