--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -2,21 +2,19 @@
 <html>
     <head>
         <%-include ('../partials/head.ejs')%>
-        <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-  rel="stylesheet"
-/>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
 <!-- Google Fonts -->
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 <!-- MDB -->
-<link
-  href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css"
-  rel="stylesheet"
-/>
-    </head>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css" rel="stylesheet"/>
+<!-- LOGIN MODAL  -->
+<link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!-- END LOGIN MODAL -->
+</head>
     <body>
         <nav>
             <%-include ('../partials/nav.ejs')%>
@@ -137,10 +135,9 @@ data-mdb-ride="carousel"
                     <h1 class="font-weight-light">Start Planning for the trip of a lifetime!</h1>
                     <p>Create an account to begin planning your trips! Check out the top trending destinations and see trips others have created.</p>
                     <%if(!isLoggedIn){%>
-                      <a class="btn btn-primary" href="/users">Start planning</a>
+                      <a class="btn btn-primary" href="#myModal" class="trigger-btn" data-toggle="modal">Start planning</a>
                     <%}%>
                 </div>
-            </div>
             <!-- Call to Action-->
             <div class="card text-white bg-secondary my-5 py-4 text-center" id="actionbar" >
                 <div class="card-body" ><p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p></div>
@@ -217,17 +214,40 @@ data-mdb-ride="carousel"
                   }
           initMap();
       </script> 
+    <head>
 
-    <!--  <iframe
-    //     width="600"
-    //     height="450"
-    //     style="border:0"
-    //     loading="lazy"
-    //     allowfullscreen
-    //     src="https://www.google.com/maps/embed/v1/place?key=<%=process.env.GOOGLE_API_KEY%>&q=atlantic+ocean"
-    //     markers: null>
-    //   </iframe>  -->
+    </head>
+    
 
-
-    </body>
+    <!--BEGIN LOGIN MODAL-->
+    <div id="myModal" class="modal fade">
+      <div class="modal-dialog modal-login">
+        <div class="modal-content">
+          <div class="modal-header">				
+            <h4 class="modal-title">Member Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <form action="/users/login" method="POST">
+              <div class="form-group">
+                <i class="fa fa-user"></i>
+                <input type="text" class="form-control" placeholder="Username" required="required" name="username">
+              </div>
+              <div class="form-group">
+                <i class="fa fa-lock"></i>
+                <input type="password" class="form-control" placeholder="Password" required="required" name="password">	
+              </div>
+              <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+              </div>
+            </form>				 
+          </div>
+          <div class="modal-footer">
+            <a href="users/new">Create an Account</a>
+          </div>
+        </div>
+      </div>
+      <!-- END LOGIN MODAL   -->
+    </html>
+</html>
 </html>
