--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,8 +12,10 @@
                         <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
                         <%}else{%>
                             <li class="nav-item"><a class="nav-link" href="#myModal" class="trigger-btn" data-toggle="modal">Login</a>
-                            <li class="nav-item"><a class="nav-link" href="/users/new">Create a new user</a>
+                            <li class="nav-item"><a href="" class="nav-link" data-toggle="modal" data-target="#modalRegisterForm">Create Account</a>
+                      
                         <%}%>
+
                 </ul>
             </div>
         </div>
