--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <%-include ('../partials/head.ejs')%>
-    </head>
-    <body>
-        <nav>
-            <%-include ('../partials/nav.ejs')%>
-        </nav>
-        <h1>This is the form to edit a user</h1>
-        <form action="/users/<%=user._id%>?_method=PUT" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" name="name">
-            <!-- PASSWORD UPDATING NEEDS WORK -->
-            <!-- <label for="password">Password:</label> -->
-            <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
-            <!-- <input type="password" name="password" minlegnth=8 required>  -->
-            <label for="departureCity">Departure City:</label>
-            <input type="text" name="departureCity">
-            <input type="submit">            
-        </form>
-        <form action="/users/<%=user._id%>/?_method=DELETE" method="POST">
-            <button type="submit" class="delete-user-button">Delete this user</button>
-        </form>
-        <script src="" async defer></script>
+
+<head>
+    <%-include ('../partials/head.ejs')%>
+</head>
+<body">
+    <nav>
+        <%-include ('../partials/nav.ejs')%>
+    </nav>
+
+    <div class="row gx-4 gx-lg-5 justify-content-between">
+        <div class="col-md-4 mb-5">
+            <div class="card h-100">
+                <div class="card-body">
+
+                    <h1 class="text-lg-center">Edit <%=user.name%> here</h1>
+                    <form action="/users/<%=user._id%>?_method=PUT" method="POST">
+                        <div class="text-lg-center">
+                            <label for="name">New name:</label>
+                            <input type="text" name="name">
+                        </div>
+                        <!-- PASSWORD UPDATING NEEDS WORK -->
+                        <!-- <label for="password">Password:</label> -->
+                        <!-- NOTE-NEED A REAL FIX FOR PASSWORD MIN VALIDATION -->
+                        <!-- <input type="password" name="password" minlegnth=8 required>  -->
+                        <div class="text-lg-center">
+                            <label for="departureCity">New departure city:</label>
+                            <input type="text" name="departureCity">
+                        </div>
+                        <p class="text-lg-center"><input class="btn bg-opacity-75 bg-dark btn-outline-light btn-lg px-2"
+                                type="submit"></p>
+                    </form>
+                    <div class="text-lg-center">
+                        <form action="/users/<%=user._id%>/?_method=DELETE" method="POST">
+                            <button type="submit"
+                                class="delete-user-button btn bg-opacity-75 bg-dark btn-outline-light btn-lg px-3">Delete
+                                <%=user.name%></button>
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+    </footer>
     </body>
 </html>
